# multirun

./: .drone.yml  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CNAME  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu  LICENSE  LICENSE.md  Makefile  README.md  _config.yml  config.h.in  multirun.c  package.bash  package.sh  tests.bats
.github/workflows/: build.yml
build-env/alpine/: Dockerfile
build-env/debian/: Dockerfile
docs/: index.md
zombiemaster/: CMakeLists.txt  zombiemaster.c
